Changes evolution glyphs color on level evolution table to a neutral gray

--- a/portal/profiles/desarrollo/pdf.properties
+++ b/portal/profiles/desarrollo/pdf.properties
@@ -26,6 +26,9 @@ path.mode.red = ${deploy.path}/images/modalidadRojo.png
 path.evolution.increase = ${deploy.path}/img/up.png
 path.evolution.decrease = ${deploy.path}/img/down.png
 path.evolution.same = ${deploy.path}/img/horizontal.png
+path.evolution.increase.neutral = ${deploy.path}/img/up_neutral.png
+path.evolution.decrease.neutral = ${deploy.path}/img/down_neutral.png
+path.evolution.same.neutral = ${deploy.path}/img/horizontal_neutral.png
 path.lenox.pdf.list =  ${deploy.path}/images/bullet_lista.gif
 path.observatory.aa.level = ${deploy.path}/images/aa_validation.png
 path.observatory.a.level = ${deploy.path}/images/a_validation.png
