Fixes evolution chart bar order, some clean code, exports basic service properties

--- a/portal/profiles/desarrollo/crawler.core.properties
+++ b/portal/profiles/desarrollo/crawler.core.properties
@@ -40,3 +40,7 @@ http.proxy.port = 8080
 inline.tags = ABBR;ACRONYM;B;BIG;CODE;CITE;DFN;EM;FONT;INS;LABEL;Q;S;SMALL;SPAN;STRIKE;STRONG;SUB;SUP;U
 
 max.num.descendants.to.serialize = 500
+
+incomplete.crawler.subject = [OAW] Rastreo inacabado {0}
+incomplete.crawler.text = El rastreo para {0} ha devuelto solo {1} resultados
+incomplete.crawler.emails = miguel.garcia@fundacionctic.org
