--- a/portal/profiles/desarrollo/mail.properties
+++ b/portal/profiles/desarrollo/mail.properties
@@ -11,4 +11,7 @@ mail.address.from.name = MINHAP Validador Accesibilidad
 mail.message.subject = Rastreador Web MINHAP
 error.mail.message = Se ha producido un error en el rastreo efectuado el d\u00EDa {0} para la entidad {1} por el Rastreador Web de MINHAP. Se han rastreado los dominios {2}
 mail.message = Informe del rastreo efectuado el d\u00EDa {0} para la entidad {1} por el Rastreador Web de MINHAP. Se han rastreado los dominios {2}
-incomplete.crawler.warning.emails = miguel.garcia@fundacionctic.org
+
+incomplete.crawler.subject = [OAW] Rastreo inacabado {0}
+incomplete.crawler.text = El rastreo para {0} ha devuelto solo {1} resultados
+incomplete.crawler.emails = miguel.garcia@fundacionctic.org
