--- a/portal/profiles/mail.properties
+++ b/portal/profiles/mail.properties
@@ -11,3 +11,7 @@ mail.address.from.name = Observatorio de accesibilidad
 mail.message.subject = Rastreador Web MINHAP
 error.mail.message = Se ha producido un error en el rastreo efectuado el d\u00EDa {0} para la entidad {1} por el Rastreador Web de MINHAP. Se han rastreado los dominios {2}
 mail.message = Informe del rastreo efectuado el d\u00EDa {0} para la entidad {1} por el Rastreador Web de MINHAP. Se han rastreado los dominios {2}
+
+incomplete.crawler.subject = [OAW] Rastreo inacabado {0}
+incomplete.crawler.text = El rastreo para {0} ha devuelto solo {1} resultados
+incomplete.crawler.emails = observ.accesibilidad@correo.gob.es
