Fixes evolution bar chart order, export basic service properties and checks descriptions

--- a/portal/profiles/integracion/crawler.properties
+++ b/portal/profiles/integracion/crawler.properties
@@ -178,16 +178,11 @@ basic.service.post.request = url={0}&correo={1}&profundidad={2}&amplitud={3}&inf
 basic.service.max.num.concurrent.users = 5
 basic.service.num.retries.check.concurrence = 200
 basic.service.time.retry.check.concurrence = 20000
-basic.service.timeout = 1800000
-basic.service.address = observ.accesibilidad@premdm.mpt.es
-basic.service.name = Servicio on-line de diagn\u00F3stico de Accesibilidad
-basic.service.reply.to.mail = observ.accesibilidad@premdm.mpt.es
-basic.service.reply.to.name = Observatorio de accesibilidad
 basic.service.title.max.length = 80
 basic.service.title.doc.max.length = 150
 basic.service.title.alternative = C\u00F3digo fuente
 
-hibernate.cfg.file.export.database = export.database.hibernate.cfg.xml
+hibernate.cfg.file.export.database = /export.database.hibernate.cfg.xml
 verification.id.reg.exp = (\\d\\.\\d\\.\\d)
 
 # Exportaci\u00F3n de anexos
