--- a/portal/profiles/integracion/propertiesmanager.properties
+++ b/portal/profiles/integracion/propertiesmanager.properties
@@ -1,4 +1,4 @@
-properties.files=mail, crawler.core, crawler, pdf, check, intav, language, management, returnPaths, role, certificados
+properties.files=mail, crawler.core, crawler, pdf, check, intav, language, management, returnPaths, role, certificados, basic.service.default, basic.service
 
 key.mail= crawler.core.properties
 file.mail=file:///opt/usuarios/oaw/properties/mail.properties
@@ -30,4 +30,10 @@ file.returnPaths=/returnPaths.properties
 key.role=role.properties
 file.role=/role.properties
 
-file.descriptions=file:///opt/usuarios/oaw/properties/descriptions.properties
+key.basic.service.default=basic.service.properties
+file.basic.service.default=/basic.service.default.properties
+
+key.basic.service=basic.service.properties
+file.basic.service=file:///opt/usuarios/oaw/properties/basic.service.properties
+
+file.descriptions=file:///opt/usuarios/oaw/properties/check.descriptions.properties
