--- a/portal/pom.xml
+++ b/portal/pom.xml
@@ -102,6 +102,11 @@
             <version>5.1.31</version>
         </dependency>
         <dependency>
+            <groupId>com.googlecode.json-simple</groupId>
+            <artifactId>json-simple</artifactId>
+            <version>1.1.1</version>
+        </dependency>
+        <dependency>
             <groupId>com.opencsv</groupId>
             <artifactId>opencsv</artifactId>
             <version>3.2</version>
