Updates copyright text

--- a/portal/src/main/resources/ApplicationResources.properties
+++ b/portal/src/main/resources/ApplicationResources.properties
@@ -490,7 +490,7 @@ ubicacion.usuario = Esta usted en:
 pagina.login = P\u00E1gina de Login
 login.usuario = Login de Usuario
 datos.acceso = Datos de acceso
-copyright = Copyright \u00A9 2014 - <span class="negrita">Ministerio de Hacienda y Administraciones P\u00FAblicas</span>
+copyright = Copyright \u00A9 2014 - <span class="negrita">Ministerio de Hacienda y Funci\u00F3n P\u00FAblica</span>
 boton.aceptar = Aceptar
 boton.cancelar = Cancelar
 boton.volver = Volver
