--- a/portal/pom.xml
+++ b/portal/pom.xml
@@ -162,6 +162,13 @@
             <version>2.6.0</version>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+            <groupId>org.apache.tomcat</groupId>
+            <artifactId>tomcat-catalina</artifactId>
+            <version>7.0.27</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
 </project>
