Fixes reading basic service evolution results from BD

--- a/portal/profiles/integracion/crawler.properties
+++ b/portal/profiles/integracion/crawler.properties
@@ -19,7 +19,7 @@ url.administrator.message = La URL donde se ha producido el error es\:
 date.date.format = yyyy-MM-dd
 date.hour.format = HH:mm:dd
 date.complet.format = yyyy-MM-dd HH:mm:ss
-date.basicservice.evolutivo.format = dd-MM-yyyy HH:mm:ss
+date.basicservice.evolutivo.format = dd/MM/yyyy HH:mm
 date.form.format = dd/MM/yyyy HH:mm
 date.format.simple = dd/MM/yyyy
 date.format.simple.pdf = dd/MM/yyyy
