Added SIM Mail Service and a MailProviderFactory so SIM and SMTP services can be interchangeable

--- a/portal/profiles/desarrollo/mail.properties
+++ b/portal/profiles/desarrollo/mail.properties
@@ -1,5 +1,5 @@
 # Par\u00E1metros para el env\u00EDo de correos
-mail.transport.protocol = smtp
+mail.transport.protocol = sim
 mail.smtp.host =smtp.fundacionctic.org
 mail.smtp.port =
 mail.smtp.sslport=
@@ -15,3 +15,9 @@ mail.message = Informe del rastreo efectuado el d\u00EDa {0} para la entidad {1}
 incomplete.crawler.subject = [OAW] Rastreo inacabado {0}
 incomplete.crawler.text = El rastreo para {0} ha devuelto solo {1} resultados
 incomplete.crawler.emails = miguel.garcia@fundacionctic.org
+
+sim.mailservice.wsdl.url = https://pre-misim.redsara.es/misim-bus-webapp/EnvioMensajesService?wsdl
+sim.user.username = observ.accesibilidad
+sim.user.password = OAW,16.SIM
+sim.mailservice.id= 942
+
