--- a/common/src/test/resources/mail.properties
+++ b/common/src/test/resources/mail.properties
@@ -1,5 +1,4 @@
-# Par\u00E1metros para el env\u00EDo de correos
-mail.transport.protocol = sim
+mail.transport.protocol = test
 mail.smtp.host =smtp.fundacionctic.org
 mail.smtp.port =
 mail.smtp.sslport=
@@ -12,13 +11,4 @@ mail.message.subject = Rastreador Web MINHAP
 error.mail.message = Se ha producido un error en el rastreo efectuado el d\u00EDa {0} para la entidad {1} por el Rastreador Web de MINHAP. Se han rastreado los dominios {2}
 mail.message = Informe del rastreo efectuado el d\u00EDa {0} para la entidad {1} por el Rastreador Web de MINHAP. Se han rastreado los dominios {2}
 
-incomplete.crawler.subject = [OAW] Rastreo inacabado {0}
-incomplete.crawler.text = El rastreo para {0} ha devuelto solo {1} resultados
-incomplete.crawler.emails = miguel.garcia@fundacionctic.org
 incomplete.crawler.warning.emails = miguel.garcia@fundacionctic.org
-
-sim.mailservice.wsdl.url = https://pre-misim.redsara.es/misim-bus-webapp/EnvioMensajesService?wsdl
-sim.user.username = observ.accesibilidad
-sim.user.password = OAW,16.SIM
-sim.mailservice.id= 942
-
