Updates observatory related pages

--- a/portal/src/main/resources/ApplicationResources.properties
+++ b/portal/src/main/resources/ApplicationResources.properties
@@ -492,6 +492,7 @@ login.usuario = Login de Usuario
 datos.acceso = Datos de acceso
 copyright = Copyright \u00A9 2014 - <span class="negrita">Ministerio de Hacienda y Funci\u00F3n P\u00FAblica</span>
 boton.aceptar = Aceptar
+boton.buscar = Buscar
 boton.cancelar = Cancelar
 boton.volver = Volver
 boton.volver.alt = Volver
@@ -874,7 +875,7 @@ gestion.resultados.observatorio = Resultados Observatorio
 resultados.observatorio.cualquier.complejidad = Cualquiera
 resultados.observatorio.cualquier.categoria = Cualquiera
 resultados.observatorio.nombre = Nombre
-resultados.observatorio.ultima.puntuacion = \u00DAltima puntuaci\u00F3n
+resultados.observatorio.ultima.puntuacion = Puntuaci\u00F3n
 resultados.observatorio.estado = Activo
 resultados.observatorio.acciones = Acciones
 resultado.observatorio.activo.alt = Activo
