Moves h1 header from each section to the page header

--- a/portal/src/main/resources/ApplicationResources.properties
+++ b/portal/src/main/resources/ApplicationResources.properties
@@ -13,7 +13,8 @@ application.title.certificados = RASTREADOR WEB - Certificados digitales
 application.title.config.malware = RASTREADOR WEB - Configuraci\u00F3n del cartucho de malware
 application.title.observatorio = RASTREADOR WEB - Observatorio
 application.title.diagnostico = RASTREADOR WEB - Servicio de Diagn\u00F3stico
-application.logo.alt = MINHAFP - Ministerio de Hacienda y Funci\u00F3n P\u00FAblica
+application.logo.alt = Observatorio de Accesibilidad Web
+ministerio.logo.alt = MINHAFP - Ministerio de Hacienda y Funci\u00F3n P\u00FAblica
 
 date.format = (dd/mm/yyyy)
 
