Joins annex export both related actions into one

--- a/portal/src/main/resources/ApplicationResources.properties
+++ b/portal/src/main/resources/ApplicationResources.properties
@@ -398,6 +398,7 @@ migas.modificar.cuenta.cliente = Modificar Cuenta Cliente
 migas.ver.cuenta.usuario = Ver Cuenta Cliente
 migas.certificados = Certificados
 migas.nuevo.certificado = Nuevo Certificado
+migas.exportar = Exportar resultados
 
 migas.config.malware.a = Configuraci\u00F3n de an\u00E1lisis de URLs
 migas.config.malware.b = Configuraci\u00F3n de an\u00E1lisis de contenidos
