Fixes other options sections styles

--- a/portal/src/main/resources/ApplicationResources.properties
+++ b/portal/src/main/resources/ApplicationResources.properties
@@ -317,6 +317,7 @@ migas.nuevo.usuario = Nuevo Usuario
 migas.nuevo.usuario.cliente = Nuevo Usuario Cliente
 migas.nuevo.usuario.observatorio = Nuevo Usuario Observatorio
 migas.editar.usuario = Editar Usuario
+migas.eliminar.usuario = Eliminar Usuario
 migas.ver.usuario = Ver Usuario
 migas.cambiar.pass.admin = Cambiar Password
 migas.cambiar.pass.usuario = Cambiar Password Usuario
@@ -661,17 +662,6 @@ resultados.anonimos.puntuacion.media.observatorio.title = Evoluci\u00F3n de la P
 resultados.anonimos.puntuacion.media.aspecto.title=  Evoluci\u00F3n de la Puntuaci\u00F3n Media por Aspecto. {0}
 resultados.anonimos.puntuacion.media.verificacion.title =  Evoluci\u00F3n de la Puntuaci\u00F3n Media por Verificaci\u00F3n. Verificaci\u00F3n {0}
 
-resultados.anonimos.multilanguage.gl.lang.home.title = 1. Presencia de enlaces de cambio de idioma en la home.
-resultados.anonimos.multilanguage.gl.lang.inpg.title = 2. Presencia de enlaces de cambio de idioma en p\u00E1ginas internas.
-resultados.anonimos.multilanguage.gl.correct.link.home.title = 3. Porcentaje de p\u00E1ginas traducidas de las home
-resultados.anonimos.multilanguage.gl.correct.link.inpg.title = 4. Porcentaje de p\u00E1ginas traducidas de p\u00E1ginas internas.
-resultados.anonimos.multilanguage.gl.total.home.title = 5. Adecuaci\u00F3n de la traducci\u00F3n de las home.
-resultados.anonimos.multilanguage.gl.total.inpg.title = 6. Adecuaci\u00F3n de la traducci\u00F3n de las p\u00E1ginas internas.
-resultados.anonimos.multilanguage.gl.dec.home.title = 7. Adecuaci\u00F3n del idioma declarado en las p\u00E1ginas traducidas de la home.
-resultados.anonimos.multilanguage.gl.dec.inpg.title = 8. Adecuaci\u00F3n del idioma declarado en las p\u00E1ginas traducidas de las p\u00E1ginas internas.
-resultados.anonimos.multilanguage.gl.tr.home.title = 9. Adecuaci\u00F3n del texto de la traducci\u00F3n de la home.
-resultados.anonimos.multilanguage.gl.tr.inpg.title = 10. Adecuaci\u00F3n del texto de la traducci\u00F3n de las p\u00E1ginas internas.
-
 resultados.anonimos.language.lang = Lenguaje
 resultados.anonimos.language.noT = No traducidos
 resultados.anonimos.language.correctT = Bien traducidos
@@ -740,19 +730,6 @@ resultados.anonimos.222 =  Verificaci\u00F3n 2.2.2
 resultados.anonimos.223 =  Verificaci\u00F3n 2.2.3
 resultados.anonimos.224 =  Verificaci\u00F3n 2.2.4
 resultados.anonimos.225 =  Verificaci\u00F3n 2.2.5
-
-resultados.anonimos.lenox.porcentaje.prioridad.terminos.title = 1. Porcenaje de T\u00E9rminos por Prioridad.
-resultados.anonimos.lenox.porcentaje.prioridad.seg.terminos.title = 2. Porcenaje de T\u00E9rminos por Prioridad y Segmento.
-resultados.anonimos.lenox.numero.prioridad.seg.terminos.title = 3. N\u00FAmero de T\u00E9rminos por Prioridad y Segmento.
-
-resultados.anonimos.lenox.porcentaje.prioridad.terminos.s1.title = 1. Porcenaje de T\u00E9rminos por Prioridad. Segmento I.
-resultados.anonimos.lenox.porcentaje.prioridad.terminos.s2.title = 1. Porcenaje de T\u00E9rminos por Prioridad. Segmento II.
-resultados.anonimos.lenox.porcentaje.prioridad.terminos.s3.title = 1. Porcenaje de T\u00E9rminos por Prioridad. Segmento III.
-
-resultados.anonimos.lenox.numero.terminos.prioridad.alta.title = 1. Evoluci\u00F3n: N\u00FAmero de T\u00E9rminos de Prioridad Alta
-resultados.anonimos.lenox.numero.terminos.prioridad.media.title = 2. Evoluci\u00F3n: N\u00FAmero de T\u00E9rminos de Prioridad Media
-resultados.anonimos.lenox.numero.terminos.prioridad.baja.title = 3. Evoluci\u00F3n: N\u00FAmero de T\u00E9rminos de Prioridad Baja
-resultados.anonimos.lenox.porcentaje.terminos.prioridad.title = 4.Evoluci\u00F3n: Porcentaje de T\u00E9rminos por Prioridad
 
 resultados.anonimos.porcentaje.terminos = Porcentaje de T\u00E9rminos
 resultados.anonimos.numero.terminos = N\u00FAmero de T\u00E9rminos
