More UI changes to Resultados Observatorio related pages

--- a/portal/src/main/resources/ApplicationResources.properties
+++ b/portal/src/main/resources/ApplicationResources.properties
@@ -873,12 +873,18 @@ resultado.observatorio.rastreo.realizado.estado = Estado
 resultado.observatorio.rastreo.realizado.estado.lanzado = Lanzado
 resultado.observatorio.rastreo.realizado.estado.terminado = Terminado
 resultado.observatorio.rastreo.realizado.estado.error = Incompleto
+resultado.observatorio.rastreo.realizado.resultados= Resultados individuales
+resultado.observatorio.rastreo.realizado.informe.agregado= Informe agregado
+resultado.observatorio.rastreo.realizado.informes.individuales = Informes individuales
+resultado.observatorio.rastreo.realizado.graficas.agregadas = Gr\u00e1ficas agregadas
+resultado.observatorio.rastreo.realizado.anexos = Anexos
+resultado.observatorio.rastreo.realizado.eliminar = Eliminar
 resultado.observatorio.rastreo.realizado.fecha.ejecucion = Fecha de Ejecuci\u00F3n
 resultado.observatorio.rastreo.realizado.acciones = Acciones
 resultado.observatorio.rastreo.realizado.puntuacion = Puntuaci\u00F3n
 gestion.resultados.observatorio.ejecuciones = Listado de Ejecuciones del Observatorio
 resultados.observatorio.lanzar.semilla.confirmacion = Lanzar Rastreo
-resultados.observatorio.lanzar.semilla.conf = \u00BFEst\u00E1 seguro de que desea relanzar el rastreo asociado a esta semilla? 
+resultados.observatorio.lanzar.semilla.conf = \u00BFEst\u00E1 seguro de que desea relanzar el rastreo asociado a esta semilla?
 resultados.observatorio.lanzar.semilla.info = Se eliminar\u00E1n los resultados actuales de la ejecuci\u00F3n y se asociar\u00E1n a ella los nuevos.
 
 resultados.observatorio.vista.primaria = Resultados Observatorio
