Lastest changes to UI and better basic service evolution param validation

--- a/portal/profiles/desarrollo/basic.service.properties
+++ b/portal/profiles/desarrollo/basic.service.properties
@@ -13,7 +13,7 @@ basic.service.mail.subject = Informe de Accesibilidad Web: {0}
 #   - {3} se sustituye por la amplitud
 #   - {4} se sustituye por la marca de restringir a dominio (basic.service.indomain.yes o basic.service.indomain.no)
 #   - {5} se sustituye por la metodología
-basic.service.mail.text.observatory = Usted recibe este correo como respuesta a una petici\u00F3n realizada por el usuario de la Comunidad Accesibilidad "{0}" para emitir el siguiente Informe de Accesibilidad Web\:\n\n-URL\: {1}\n-Profundidad\: {2}\n-Amplitud\: {3}\n-Rastreo limitado por directorio\: {4}\n-Tipo de informe\: {5}\n\nSi usted no ha solicitado este an\u00E1lisis, por favor, elimine el correo e informe sobre ello a observ.accesibilidad@correo.gob.es.\n\nEn el archivo adjunto encontrar\u00E1 el informe solicitado en formato PDF y comprimido con Zip. Puede descomprimirlo con m\u00FAltiples descompresores como Winzip o Winrar.\n\nReciba un cordial saludo.\n\n----------------------------------------------------------------\nServicio on-line de Diagn\u00F3stico de la Accesibilidad\nDirecci\u00F3n de Tecnolog\u00EDas de la Informaci\u00F3n y las Comunicaciones\nMinisterio de Hacienda y Administraciones P\u00FAblicas\nContacto\: observ.accesibilidad@correo.gob.es
+basic.service.mail.text.observatory = Usted recibe este correo como respuesta a una petici\u00F3n realizada por el usuario de la Comunidad Accesibilidad "{0}" para emitir el siguiente Informe de Accesibilidad Web\:\n\n-URL\: {1}\n-Profundidad\: {2}\n-Amplitud\: {3}\n-Rastreo limitado por directorio\: {4}\n-Tipo de informe\: {5}\n\nSi usted no ha solicitado este an\u00E1lisis, por favor, elimine el correo e informe sobre ello a observ.accesibilidad@correo.gob.es.\n\nEn el archivo adjunto encontrar\u00E1 el informe solicitado en formato PDF y comprimido con Zip. Puede descomprimirlo con m\u00FAltiples descompresores como Winzip o Winrar.\n\nReciba un cordial saludo.\n\n----------------------------------------------------------------\nServicio on-line de Diagn\u00F3stico de la Accesibilidad\nDirecci\u00F3n de Tecnolog\u00EDas de la Informaci\u00F3n y las Comunicaciones\r\nMinisterio de Hacienda y Administraciones P\u00FAblicas\r\nContacto\: observ.accesibilidad@correo.gob.es
 # Analisis codigo fuente:
 #   - {0} se sustituye por el usuario de la Comunidad de Accesibilidad
 #   - {1} se sustituye por la metodología
@@ -38,6 +38,7 @@ basic.service.width = La amplitud del rastreo (par\u00E1metro 'amplitud')
 basic.service.content = El c\u00F3digo fuente a analizar (par\u00E1metro 'codigo')
 basic.service.report.not.valid = El tipo de informe seleccionado no es v\u00E1lido, por favor escoja un tipo de informe en el formulario
 basic.service.url.or.content = Debe especificar una direcci\u00F3n a rastrear o un c\u00F3digo fuente a analizar.
+basic.service.evolution.not.valid = La opci\u00F3n de guardar el resultado en el hist\u00F3rico requiere que el an\u00E1lisis se realice sobre 17 p\u00E1ginas
 
 # Mensajes de la cola de peticiones
 basic.service.launched = El servicio b\u00E1sico ha sido lanzado. Cuando los resultados est\u00E9n listos, se le enviar\u00E1n los resultados al correo electr\u00F3nico que ha especificado.
