--- a/portal/src/main/resources/ApplicationResources.properties
+++ b/portal/src/main/resources/ApplicationResources.properties
@@ -533,8 +533,8 @@ ver.ejemplos = Ver ejemplos
 
 eliminar.cateroria = Eliminar Segmento
 eliminar.categoria.titulo = Eliminar Segmento
-eliminar.categoria.confirmacion = \u00BFEST\u00C1 SEGURO QUE DESEA ELIMINAR EL SIGUIENTE SEGMENTOA?
-eliminar.categoria.categoria = Segmentoa:
+eliminar.categoria.confirmacion = \u00BFEST\u00C1 SEGURO QUE DESEA ELIMINAR EL SIGUIENTE SEGMENTO?
+eliminar.categoria.categoria = Segmento:
 eliminar.categoria.umbral = Umbral:
 
 eliminar.rastreo = Eliminar Rastreo
@@ -559,7 +559,7 @@ eliminar.termino.peso = Peso
 
 eliminar.usuario = Eliminar Usuario
 eliminar.usuario.titulo = Eliminar Usuarios
-eliminar.usuario.confirmacion = \u00BFEST\u00C1 SEGURO QUE DESEA ELIMINAR EL SIGUIENTE USUARIO?
+eliminar.usuario.confirmacion = \u00bfEst\u00E1 seguro que desea eliminar el siguiente usuario?
 eliminar.usuario.usuario = Usuario
 eliminar.usuario.cartucho = Cartucho
 eliminar.usuario.tipo = Tipo
@@ -916,7 +916,7 @@ observatory.aspect.navigation = Navegaci\u00F3n
 observatory.aspect.structure = Estructura
 observatory.aspect.presentation = Presentaci\u00F3n
 
-confirmacion.eliminar.semilla.observatorio.pregunta = \u00BFEsta seguro que desea eliminar la siguiente semilla? 
+confirmacion.eliminar.semilla.observatorio.pregunta = \u00BFEst\u00E1 seguro que desea eliminar la siguiente semilla?
 confirmacion.eliminar.semilla.observatorio.info = Se eliminar\u00E1 la asociaci\u00F3n de la semilla con el observatorio y los resultados de la misma.
 confirmacion.eliminar.semilla.observatorio.nombre = Nombre
 confirmacion.eliminar.semilla.observatorio.url = Url
@@ -933,7 +933,7 @@ nueva.semilla.observatorio.dependencia = Depende de
 nueva.semilla.observatorio.acronimo = Acr\u00F3nimo
 nueva.semilla.observatorio.in.directory = Seguir solo enlaces del directorio:
 
-confirmacion.eliminar.semilla.pregunta = \u00BFEsta seguro que desea eliminar la siguiente semilla?
+confirmacion.eliminar.semilla.pregunta = \u00BFEst\u00E1 seguro que desea eliminar la siguiente semilla?
 confirmacion.eliminar.semilla.info = La semilla est\u00E1 o ha estado asociada a los siguientes observatorios:
 confirmacion.eliminar.semilla.info2 = Si la borra, con ella se borrar\u00E1n los resultados de los observatorios anteriores asociados a la misma.
 confirmacion.eliminar.semilla.nombre = Nombre Semilla
@@ -971,10 +971,10 @@ indice.cartuchos.accion.borrar = Eliminar Cartucho
 indice.cartuchos.accion.modificar = Modificar Cartucho
 indice.cartuchos.vacio = No hay cartuchos disponibles.
 
-indice.categorias.gestion.categorias = Gesti\u00F3n de Categor\u00EDas
-indice.categorias.categorias = Listado de Categor\u00EDas
-indice.categorias.lista.categorias = Lista de Categorias
-indice.categorias.categoria = Categor\u00EDa
+indice.categorias.gestion.categorias = Gesti\u00F3n de Segmentos
+indice.categorias.categorias = Listado de Segmentos
+indice.categorias.lista.categorias = Lista de Segmentos
+indice.categorias.categoria = Segmento
 indice.categorias.umbral = Umbral
 indice.categorias.terminos = T\u00E9rminos
 indice.categorias.acciones = Acciones
@@ -1088,6 +1088,8 @@ menuadmin.observatorio = Observatorios
 menuadmin.observatorio.title = Acceder a la parte de gesti\u00F3n del observatorio
 menuadmin.servicio_diagnostico = Servicio diagn\u00F3stico
 menuadmin.servicio_diagnostico.title = Acceder a la gesti\u00F3n del servicio de diagn\u00F3stico
+menuadmin.exportar_servicio_diagnostico = Estad\u00EDsticas
+menuadmin.exportar_servicio_diagnostico.title = Exportar estd\u00EDsticas de uso del servicio de diagn\u00F3stico
 menuadmin.rastreos = Rastreos
 menuadmin.rastreos.title = Acceder a la parte de gesti\u00F3n de rastreos
 menuadmin.categorias = Segmentos
@@ -1223,21 +1225,21 @@ nueva.categoria.termino4 = T\u00E9rmino 4:
 nueva.categoria.peso = Peso:
 
 gestion.semillas = Gesti\u00F3n de Semillas
-categoria.semillas.titulo = Segmento\u00EDas de semillas
-categoria.semillas.lista = Lista de categor\u00EDas de semillas
-categoria.semillas.vacia = En este momento no existen categor\u00EDas de semillas
+categoria.semillas.titulo = Semillas del segmento
+categoria.semillas.lista = Lista de segmentos de semillas
+categoria.semillas.vacia = En este momento no existen segmentos de semillas
 categoria.semillas.asociadas.vacio = No existen resultados para su petici\u00F3n.
-categoria.semillas.nombre = Segmento
+categoria.semillas.nombre = Semilla
 categoria.semillas.complejidad = Complejidad
 categoria.semillas.operaciones = Operaciones
 categoria.semillas.borrar.titulo = Eliminar categor\u00EDa
-categoria.semillas.borrar.advertencia = \u00BFEsta seguro que desea eliminar la categor\u00EDa?
-categoria.semillas.borrar.info = La categor\u00EDa est\u00E1 o ha estado asociada a los siguientes observatorios:
-categoria.semillas.borrar.info2 = Si la borra, con ella se borrar\u00E1n los resultados de los observatorios anteriores asociados a la misma.
+categoria.semillas.borrar.advertencia = \u00BFEst\u00E1 seguro que desea eliminar el segmento?
+categoria.semillas.borrar.info = El segmento est\u00E1 o ha estado asociada a los siguientes observatorios:
+categoria.semillas.borrar.info2 = Si la borra, con ella se borrar\u00E1n los resultados de los observatorios anteriores asociados a ese segmento.
 categoria.semillas.borrar.semilla.advertencia = Atenci\u00F3n, borrando una semilla se borrar\u00E1n los resultados para esa semilla.
-categoria.semillas.nueva = Nueva categor\u00EDa
+categoria.semillas.nueva = Nuevo segmento
 categoria.semillas.nueva.semilla = Nueva semilla
-categoria.semillas.orden = Posici\u00F3n de la categor\u00EDa
+categoria.semillas.orden = Posici\u00F3n del segmento
 categoria.semillas.fichero = Fichero de semillas
 categoria.semillas.fichero.info = Para adjuntar varias semillas de una forma r\u00E1pida, se puede subir un archivo XML que tenga un formato igual que el del ejemplo siguiente: {0}
 categoria.semillas.fichero.ejemplo = Ejemplo
