Grid para edición rápida de semillas. Alta de nuevas semillas con soporte para múltiples dependencias

--- a/oaw_2017_2018/portal/src/main/resources/ApplicationResources.properties
+++ b/oaw_2017_2018/portal/src/main/resources/ApplicationResources.properties
@@ -3436,3 +3436,7 @@ anonymous.html.logoMP.alt = Ministerio de Hacienda y Administraciones P\u00FAbli
 anonymous.html.logoObs.alt = Observatorio de Accesibilidad Web
 
 observatory.servicio.diagnostico.url = http://administracionelectronica.gob.es/comunidades/accesibilidad
+
+semilla.nueva.nombre.requerido = El campo Nombre es obligatorio
+semilla.nueva.activa.requerido = El campo Activa es obligatorio
+semilla.nueva.url.requerido = El campo URL es obligatorio
