Generación de informes de resultados de análisis por cada dependencia de una semilla. Grid de semillas editable en resultados de observatorio

--- a/oaw_2017_2018/crawler/profiles/desarrollo/crawler.core.properties
+++ b/oaw_2017_2018/crawler/profiles/desarrollo/crawler.core.properties
@@ -6,7 +6,7 @@ check.accessibility.default.language = es
 # Par\u00E1metros para el servidor de correo
 mail.transport.protocol = smtp
 mail.smtp.host =
-mail.address.from = intav@inteco.es
+mail.address.from = alvaro.pelaez@fundacionctic.org
 mail.address.from.name = Inteco Accessibility Validator
 mail.message.subject = Rastreador Web INTECO
 error.mail.message = Se ha producido un error en el rastreo efectuado el d\u00EDa {0} para la entidad {1} por el Rastreador Web de Inteco. Se han rastreado los dominios {2}
