--- a/oaw_2017_2018/portal/profiles/desarrollo/crawler.properties
+++ b/oaw_2017_2018/portal/profiles/desarrollo/crawler.properties
@@ -9,7 +9,7 @@ datasource.name.intav = jdbc/oaw
 datasource.name.multilanguage = jdbc/oaw
 datasource.name.malware = jdbc/oaw
 
-alert.from.address = miguel.garcia@fundacionctic.org
+alert.from.address = alvaro.pelaez@fundacionctic.org
 alert.from.name = Rastreador Web
 alert.from.subject = Error en la aplicaci\u00F3n del Rastreador
 warning.administrator.message = Se le ha enviado este correo para avisarle de que ha tenido lugar un error irrecuperable en el Rastreador Web:
