--- a/oaw_2017_2018/portal/profiles/desarrollo/mail.properties
+++ b/oaw_2017_2018/portal/profiles/desarrollo/mail.properties
@@ -6,7 +6,7 @@ mail.smtp.sslport=
 mail.smtp.tls=false
 mail.smtp.user =
 mail.smtp.pass =
-mail.address.from = miguel.garcia@fundacionctic.org
+mail.address.from = alvaro.pelaez@fundacionctic.org
 mail.address.from.name = MINHAP Validador Accesibilidad
 mail.message.subject = Rastreador Web MINHAP
 error.mail.message = Se ha producido un error en el rastreo efectuado el d\u00EDa {0} para la entidad {1} por el Rastreador Web de MINHAP. Se han rastreado los dominios {2}
@@ -14,8 +14,8 @@ mail.message = Informe del rastreo efectuado el d\u00EDa {0} para la entidad {1}
 
 incomplete.crawler.subject = [OAW] Rastreo inacabado {0}
 incomplete.crawler.text = El rastreo para {0} ha devuelto solo {1} resultados
-incomplete.crawler.emails = miguel.garcia@fundacionctic.org
-incomplete.crawler.warning.emails = miguel.garcia@fundacionctic.org
+incomplete.crawler.emails = alvaro.pelaez@fundacionctic.org
+incomplete.crawler.warning.emails = alvaro.pelaez@fundacionctic.org
 
 sim.mailservice.wsdl.url = https://misim.redsara.es/misim-bus-webapp/EnvioMensajesService?wsdl
 #sim.mailservice.wsdl.url = https://pre-misim.redsara.es/misim-bus-webapp/EnvioMensajesService?wsdl
