Mantenimiento de dependencias!

--- a/oaw_2017_2018/portal/src/main/resources/ApplicationResources.properties
+++ b/oaw_2017_2018/portal/src/main/resources/ApplicationResources.properties
@@ -370,6 +370,8 @@ migas.semillas.observatorio = Semillas
 migas.nueva.semilla.observatorio = Nueva Semilla
 migas.editar.semillas.observatorio = Editar Semilla
 migas.eliminar.semillas.observatorio = Eliminar Semilla
+migas.dependencias.observatorio = Dependencias
+migas.nueva.dependencia.observatorio = Nueva dependencia
 migas.cartucho = Cartucho
 migas.editar.cartucho = Editar Cartucho
 migas.subir.cartucho = Subir Cartucho
@@ -838,6 +840,11 @@ semilla.observatorio.vacia = No hay semillas de Observatorio disponibles.
 lista.semillas.observatorio = Lista de Semillas
 etitar.semilla.observatorio = Editar Semilla
 
+gestion.dependencias.observatorio = Gesti\u00F3n de Dependencias del Observatorio
+gestion.dependencias.observatorio.titulo = Gesti\u00F3n de Dependencias del Observatorio
+nueva.dependencia.observatorio.nombre = Nombre de la dependencia
+nueva.dependencia.observatorio = Nueva dependencia
+
 eliminar.semilla.observatorio = Eliminar Semilla del Observatorio
 eliminar.semilla.observatorio.desactivado = Eliminar Semilla Desactivado
 anadir.semilla.observatorio = A\u00F1adir Semilla al Observatorio
@@ -1124,6 +1131,10 @@ menu.config.observatory.seed = Semillas
 menu.config.observatory.seed.title = Semillas asociadas al Observatorio
 menu.config.observatory = Observatorio
 menu.config.observatory.title = Observatorio
+
+menu.config.dependencias = Dependencias
+menu.config.dependencias.title = Dependencias asociadas a semillas
+
 
 menuconfig.LogOut = Log Out
 menuconfig.rastreos = Rastreos
