Mantenimiento de dependencias.\nElimnadas relaciones semilla-dependencia al borrar semilla o dependencia.\nListados de semillas ordenados por nombre

--- a/oaw_2017_2018/portal/src/main/resources/ApplicationResources.properties
+++ b/oaw_2017_2018/portal/src/main/resources/ApplicationResources.properties
@@ -844,6 +844,10 @@ gestion.dependencias.observatorio = Gesti\u00F3n de Dependencias del Observatori
 gestion.dependencias.observatorio.titulo = Gesti\u00F3n de Dependencias del Observatorio
 nueva.dependencia.observatorio.nombre = Nombre de la dependencia
 nueva.dependencia.observatorio = Nueva dependencia
+mensaje.error.nombre.dependencia.duplicado = Nombre de dependencia ya existente
+mensaje.exito.dependencia.generada = Dependencia generada con \u00E9xito.
+mensaje.exito.dependencia.eliminada = Dependencia eliminada con \u00E9xito.
+mensaje.error.nombre.dependencia.obligatorio= El nombre de la dependencia es obligatorio
 
 eliminar.semilla.observatorio = Eliminar Semilla del Observatorio
 eliminar.semilla.observatorio.desactivado = Eliminar Semilla Desactivado
