Mantemimiento de semillas y dependencias. Cmabios para utilizar validaciones de Struts

--- a/oaw_2017_2018/portal/src/main/resources/ApplicationResources.properties
+++ b/oaw_2017_2018/portal/src/main/resources/ApplicationResources.properties
@@ -305,6 +305,7 @@ error.cuenta.usuario = Cuenta Cliente
 error.observatorio = Observatorio
 eliminar.rastreo.select = Debe marcar alguna ejecuci\u00F3n,
 error.file = Fichero
+error.dependendencia = Dependencia
 
 # LITERALES JSP
 campo.obligatorio = Campo obligatorio
