--- a/oaw_2017_2018/oaw/pom.xml
+++ b/oaw_2017_2018/oaw/pom.xml
@@ -82,7 +82,7 @@
             </activation>
             <properties>
                 <profile.name>desarrollo</profile.name>
-                <deploy.path>/home/alvaro/programas/apache-tomcat-7.0.54/webapps/portal</deploy.path>
+                <deploy.path>/home/alvaro/programas/apache-tomcat-7.0.54/webapps/oaw</deploy.path>
                 <files.path>/tmp/oaw/files</files.path>
             </properties>
         </profile>
