--- a/oaw_2017_2018/portal/src/main/resources/intav.properties
+++ b/oaw_2017_2018/portal/src/main/resources/intav.properties
@@ -80,7 +80,10 @@ iana.variant.type = variant
 
 observatory.debug.mode = true
 observatory.num.html.errors.limit = 5
-observatory.zero.red.max.number = 1
+#2012
+#observatory.zero.red.max.number = 1
+#2017
+observatory.zero.red.max.number = 2
 
 observatory.aspect.general = 1
 observatory.aspect.alternatives = 2
