Eliminada referencia a columna 'dependencia' en la tabla 'lista' tras el cambio a multidependencia. Añadida configuración para número máximo de urls a analizar en un observatorio

--- a/oaw_2017_2018/portal/src/main/resources/intav.properties
+++ b/oaw_2017_2018/portal/src/main/resources/intav.properties
@@ -128,3 +128,6 @@ xhtml.doctype =<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "h
 
 # Timeout para descargar los gifs
 gif.connection.timeout =10000
+
+# Numero maximo de urls de crawling
+max.url = 33
