Corregidos errores al enviar correos de rastreos inacabados ya que se intentaban recuperar propiedades del fichero que no correspondía

--- a/oaw_2017_2018/crawler/profiles/desarrollo/crawler.core.properties
+++ b/oaw_2017_2018/crawler/profiles/desarrollo/crawler.core.properties
@@ -3,7 +3,7 @@ check.accessibility.default.guideline = wcag-1-0
 check.accessibility.default.level = aa
 check.accessibility.default.language = es
 
-# Par\u00E1metros para el servidor de correo
+# Parametros
 mail.transport.protocol = smtp
 mail.smtp.host =
 mail.address.from = alvaro.pelaez@fundacionctic.org
@@ -12,7 +12,7 @@ mail.message.subject = Rastreador Web INTECO
 error.mail.message = Se ha producido un error en el rastreo efectuado el d\u00EDa {0} para la entidad {1} por el Rastreador Web de Inteco. Se han rastreado los dominios {2}
 mail.message = Informe del rastreo efectuado el d\u00EDa {0} para la entidad {1} por el Rastreador Web de Inteco. Se han rastreado los dominios {2}
 
-# URL de generaci\u00F3n del informe pdf
+# URL de generacion del informe pdf
 pdf.url.export = http://localhost:8080/oaw/secure/exportAction.do?id={0}&idrastreo={1}&key={2}&exportType=intavPDF
 pdf.executive.url.export = http://localhost:8080/oaw/secure/exportAction.do?id={0}&idrastreo={1}&key={2}&exportType=intavSimplePDF
 #observatory.primary.pdf.url.export = http://localhost:8080/oaw/secure/primaryExportPdfAction.do?id={1}&idrastreo={2}&key={3}&exportType=intavPDF
@@ -20,7 +20,7 @@ not.filtered.uris.security.key = 35sSG3gjKh
 
 crawler.date.format = yyyy-MM-dd HH:mm:ss
 
-crawler.user.name = inteco
+crawler.user.name = manolin
 
 iframe.reg.exp.matcher = (<iframe +.*?src\=["'](.*?)["'].*?>)
 frame.source.reg.exp.matcher = <body[^>]*>(.*?)</body>;</head>(.*?)</html>;<html[^>]*>(.*?)</html>;<!doctype[^>]*>(.*?)$
