--- a/oaw_2017_2018/crawler/profiles/integracion/crawler.core.properties
+++ b/oaw_2017_2018/crawler/profiles/integracion/crawler.core.properties
@@ -1,4 +1,4 @@
-# Par\u00E1metros para el servidor de correo
+# Parametros para el servidor de correo
 mail.transport.protocol = smtp
 mail.smtp.host =
 mail.smtp.port=
@@ -11,7 +11,7 @@ mail.message.subject = Rastreador Web MINHAP
 error.mail.message = Se ha producido un error en el rastreo efectuado el d\u00EDa {0} para la entidad {1} por el Rastreador Web de Inteco. Se han rastreado los dominios {2}
 mail.message = Informe del rastreo efectuado el d\u00EDa {0} para la entidad {1} por el Rastreador Web de Inteco. Se han rastreado los dominios {2}
 
-# URL de generaci\u00F3n del informe pdf
+# URL de generacion del informe pdf
 pdf.url.export = http://localhost:8080/oaw/secure/exportAction.do?id={0}&idrastreo={1}&key={2}&exportType=intavPDF
 pdf.executive.url.export = http://localhost:8080/oaw/secure/exportAction.do?id={0}&idrastreo={1}&key={2}&exportType=intavSimplePDF
 #observatory.primary.pdf.url.export = http://localhost:8080/oaw/secure/primaryExportPdfAction.do?id={1}&idrastreo={2}&key={3}&exportType=intavPDF
