--- a/oaw_2017_2018/portal/profiles/desarrollo/crawler.core.properties
+++ b/oaw_2017_2018/portal/profiles/desarrollo/crawler.core.properties
@@ -1,3 +1,19 @@
+check.accessibility.default.entity = Inteco
+check.accessibility.default.guideline = wcag-1-0
+check.accessibility.default.level = aa
+check.accessibility.default.language = es
+
+# Parametros
+mail.transport.protocol = smtp
+mail.smtp.host = smtp.fundacionctic.org
+mail.address.from = alvaro.pelaez@fundacionctic.org
+mail.address.from.name = Inteco Accessibility Validator
+mail.message.subject = Rastreador Web INTECO
+
+error.mail.message.subject = Error
+error.mail.message = Se ha producido un error en el rastreo efectuado el d\u00EDa {0} para la entidad {1} por el Rastreador Web de Inteco. Se han rastreado los dominios {2}
+mail.message = Informe del rastreo efectuado el d\u00EDa {0} para la entidad {1} por el Rastreador Web de Inteco. Se han rastreado los dominios {2}
+
 # URL de generaci\u00F3n del informe pdf
 pdf.url.export = http://localhost:8080/oaw/secure/exportAction.do?id={0}&idrastreo={1}&key={2}&exportType=intavPDF
 pdf.executive.url.export = http://localhost:8080/oaw/secure/exportAction.do?id={0}&idrastreo={1}&key={2}&exportType=intavSimplePDF
