--- a/oaw_2017_2018/portal/profiles/desarrollo/mail.properties
+++ b/oaw_2017_2018/portal/profiles/desarrollo/mail.properties
@@ -9,6 +9,7 @@ mail.smtp.pass =
 mail.address.from = alvaro.pelaez@fundacionctic.org
 mail.address.from.name = MINHAP Validador Accesibilidad
 mail.message.subject = Rastreador Web MINHAP
+error.mail.message.subject = [OAW] Error en el rastreo Rastreador Web MINHAP
 error.mail.message = Se ha producido un error en el rastreo efectuado el d\u00EDa {0} para la entidad {1} por el Rastreador Web de MINHAP. Se han rastreado los dominios {2}
 mail.message = Informe del rastreo efectuado el d\u00EDa {0} para la entidad {1} por el Rastreador Web de MINHAP. Se han rastreado los dominios {2}
 
