Corregidos errores al enviar correos de rastreos inacabados ya que se intentaban recuperar propiedades del fichero que no correspondía

--- a/oaw_2017_2018/crawler/profiles/desarrollo/crawler.core.properties
+++ b/oaw_2017_2018/crawler/profiles/desarrollo/crawler.core.properties
@@ -20,7 +20,7 @@ not.filtered.uris.security.key = 35sSG3gjKh
 
 crawler.date.format = yyyy-MM-dd HH:mm:ss
 
-crawler.user.name = manolin
+crawler.user.name = inteco
 
 iframe.reg.exp.matcher = (<iframe +.*?src\=["'](.*?)["'].*?>)
 frame.source.reg.exp.matcher = <body[^>]*>(.*?)</body>;</head>(.*?)</html>;<html[^>]*>(.*?)</html>;<!doctype[^>]*>(.*?)$
