Scrips de base de datos actualizados.
Corregido error la crear semilla que no guardaba compo directorio correctamente.

Corregida visualización de dependencias en gird de semilas

Actualizada la configuración para despliegue en entorno de Integración

--- a/oaw_2017_2018/portal/pom.xml
+++ b/oaw_2017_2018/portal/pom.xml
@@ -64,6 +64,16 @@
 				<targetPath>${basedir}/target/oaw/META-INF</targetPath>
 			</resource>
 		</resources>
+<!-- 
+		<plugins>
+			<plugin>
+				<artifactId>maven-war-plugin</artifactId>
+				<configuration>
+					<packagingExcludes>META-INF/context.xml</packagingExcludes>
+				</configuration>
+			</plugin>
+		</plugins> -->
+
 	</build>
 
 	<dependencies>
