--- a/oaw_2017_2018/portal/profiles/desarrollo/mail.properties
+++ b/oaw_2017_2018/portal/profiles/desarrollo/mail.properties
@@ -18,10 +18,16 @@ incomplete.crawler.text = El rastreo para {0} ha devuelto solo {1} resultados
 incomplete.crawler.emails = alvaro.pelaez@fundacionctic.org
 incomplete.crawler.warning.emails = alvaro.pelaez@fundacionctic.org
 
-sim.mailservice.wsdl.url = https://misim.redsara.es/misim-bus-webapp/EnvioMensajesService?wsdl
+#sim.mailservice.wsdl.url = https://misim.redsara.es/misim-bus-webapp/EnvioMensajesService?wsdl
 #sim.mailservice.wsdl.url = https://pre-misim.redsara.es/misim-bus-webapp/EnvioMensajesService?wsdl
+#sim.user.username = observ.accesibilidad
+#sim.user.password = OAW,16.SIM
+#sim.mailservice.id= 742
+
+#Integracion
+
+sim.mailservice.wsdl.url = https://pre-misim.redsara.es/misim-bus-webapp/EnvioMensajesService?wsdl
 sim.user.username = observ.accesibilidad
 sim.user.password = OAW,16.SIM
-sim.mailservice.id= 742
-#sim.mailservice.id= 942
+sim.mailservice.id= 942
 
