--- a/oaw_2017_2018/portal/src/main/resources/ApplicationResources.properties
+++ b/oaw_2017_2018/portal/src/main/resources/ApplicationResources.properties
@@ -446,6 +446,8 @@ migas.indice.observatorios.menu.graficas.evolucion = Evoluci\u00F3n
 
 migas.diagnostico = Servicio de Diagn\u00F3stico
 
+migas.conectividad = Conectividad
+
 	# MIGAS EXPORTACI\u00D3N HTML
 migas.html.is.in = Est\u00E1 en\: 
 migas.html.home = Inicio
@@ -1140,6 +1142,8 @@ menu.config.observatory.title = Observatorio
 menu.config.dependencias = Dependencias
 menu.config.dependencias.title = Dependencias asociadas a semillas
 
+menuadmin.conectividad = Conectividad
+menuadmin.conectividad.title = Comprobaci\u00F3n de la conectividad con servicios externos
 
 menuconfig.LogOut = Log Out
 menuconfig.rastreos = Rastreos
@@ -3456,3 +3460,13 @@ observatory.servicio.diagnostico.url = http://administracionelectronica.gob.es/c
 semilla.nueva.nombre.requerido = El campo Nombre es obligatorio
 semilla.nueva.activa.requerido = El campo Activa es obligatorio
 semilla.nueva.url.requerido = El campo URL es obligatorio
+
+
+conectividad.title = Estado de los servicios
+conectividad.sim= SIM
+conectividad.sim.estado= Estado SIM
+conectividad.url.vacia.error = Debe introducir una URL
+conectividad.form.title = Comprobaci\u00F3n de URL
+conectividad.form.url = URL
+conectividad.url.comprobada = URL comprobada
+conectividad.url.comprobada.estado = Estado
