Correciones en las opciones de comprobación de conectividad
Servicio de diagnóstico. Añadida opción para nueva metodología

--- a/oaw_2017_2018/portal/src/main/resources/ApplicationResources.properties
+++ b/oaw_2017_2018/portal/src/main/resources/ApplicationResources.properties
@@ -3462,7 +3462,7 @@ semilla.nueva.activa.requerido = El campo Activa es obligatorio
 semilla.nueva.url.requerido = El campo URL es obligatorio
 
 
-conectividad.title = Estado de los servicios
+conectividad.title = Comprobaciones de conectividad
 conectividad.sim= SIM
 conectividad.sim.estado= Estado SIM
 conectividad.url.vacia.error = Debe introducir una URL
