--- a/oaw_2017_2018/intavcore/src/test/resources/intav.properties
+++ b/oaw_2017_2018/intavcore/src/test/resources/intav.properties
@@ -1,6 +1,6 @@
 # Rutas de ficheros de configuraci\u00F3n
 path.lang.codes.txt = /usr/share/eclipse/workspace/intav/WebContent/LangCodes.txt
-check.path = checks/checks.xml
+check.path = checks/checks-2017.xml
 
 complet.date.format = dd/MM/yyyy - HH:mm:ss
 simple.date.format = yyyy-MM-dd
