Comprobación de URL duplicadas en la gestión de semillas

--- a/oaw_2017_2018/portal/src/main/resources/ApplicationResources.properties
+++ b/oaw_2017_2018/portal/src/main/resources/ApplicationResources.properties
@@ -3460,6 +3460,7 @@ observatory.servicio.diagnostico.url = http://administracionelectronica.gob.es/c
 semilla.nueva.nombre.requerido = El campo Nombre es obligatorio
 semilla.nueva.activa.requerido = El campo Activa es obligatorio
 semilla.nueva.url.requerido = El campo URL es obligatorio
+semilla.nueva.url.duplicados = Ha introducido URL duplicadas: 
 
 
 conectividad.title = Comprobaciones de conectividad
